--- a/_config.yml
+++ b/_config.yml
@@ -20,6 +20,12 @@ linkedin_username: "Yan Zhang"
 #########################################################################################
 theme: "minima"
 
+# Control which pages appear in the header navigation
+header_pages:
+  - quality-assurance.md
+  - technical-systems.md
+  - development-skills.md
+
 rss: rss
 
 kramdown:
