--- a/.github/workflows/ci-cd.yml
+++ b/.github/workflows/ci-cd.yml
@@ -14,6 +14,10 @@ on:
   # Allow manual trigger
   workflow_dispatch:
 
+# ADD THIS ENVIRONMENT SECTION
+env:
+  PAGES_REPO_NWO: yanzhang422/yanzhang422.github.io
+
 # Sets permissions of the GITHUB_TOKEN to allow deployment to GitHub Pages
 permissions:
   contents: read
